--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     
     <title>I'm oat | Cleaner</title>
     <!-- Boostrap -->
-    <link rel="stylesheet" href="./index_files/bootstrap.min.css">
+    <link rel="stylesheet" href="bootstrap.min.css">
     <!-- Boostrap's example "narrow-jumbotron" -->
-    <link rel="stylesheet" href="./index_files/narrow-jumbotron.css">
-    <link rel="stylesheet" href="./index_files/style.css">
+    <link rel="stylesheet" href="narrow-jumbotron.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body waid71fa0d88-5390-4b5b-a2f4-e45fa93d85e2="SA password protect entry checker">
       <div class="container">
@@ -19,7 +19,7 @@
         <div class="jumbotron">
           <div class="row">
             <div class="col-6">
-              <img src="./index_files/oat.jpg" class="img-thumbnail">
+              <img src="oat.jpg" class="img-thumbnail">
             </div>
             <div class="col-6 personal">
               <h3>Uka Uka Uka Uka  I'm oat</h3>
